# open2fa

./: .old.tests.py  CHANGELOG.md  LICENSE  README.md  build_requirements_txt.py  index.html  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  set_version.py  set_version.sh  tests.py
.github/workflows/: python-ci.yml
.oldtests/: new_tests_backup.py  old_tests.py
open2fa/: __init__.py  cli.py  cli_config.py  cli_utils.py  common.py  config.py  crypto.py  ex.py  main.py  msgs.py  totp.py  utils.py  uuid.py
