##### build #####
[build-system]
requires = [
    "setuptools>=61.0",
    "build"
]
build-backend = "setuptools.build_meta"

##### tool #####
[tool.isort]
profile = "black"
use_parentheses = true
line_length = 79

[tool.black]
line_length = 79
skip_string_normalization = true
skip_magic_trailing_comma = true
preview = true
target-version = ['py37']

##### project #####
[project]
name = "open2fa"
version = "0.1.0"
authors = [
  { name="Cary Carter", email="ccarterdev@gmail.com" },
]
description = "A simple 100% libre 2fa tool meant mainly for my own use on Pypi"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "logfunc==1.9.1",
]


[project.scripts]
open2fa = "open2fa.cli:main"

[project.urls]
Homepage = "https://github.com/cc-d/open2fa"
Issues = "https://github.com/cc-d/open2fa/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "twine",
    "build",
]



